update docs and fix tests
