# docs/swagger.json
@@ -1,9 +1,18 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a fantasy football manager service.",
+        "description": "Fantasy football manager microservice.",
         "title": "Fantasy football manager API",
-        "contact": {},
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "API Support",
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
         "version": "1.0"
     },
     "host": "localhost:8080",
@@ -11,7 +20,12 @@
     "paths": {
         "/player": {
             "post": {
-                "description": "create a player",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Create a player",
                 "consumes": [
                     "application/json"
                 ],
@@ -19,7 +33,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "players"
+                    "Players"
                 ],
                 "summary": "Create a player",
                 "parameters": [
@@ -60,7 +74,7 @@
         },
         "/player/{id}": {
             "get": {
-                "description": "get a player by ID",
+                "description": "Get a player by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -68,7 +82,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "players"
+                    "Players"
                 ],
                 "summary": "Show a player",
                 "parameters": [
@@ -108,7 +122,12 @@
                 }
             },
             "delete": {
-                "description": "deletes a player",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Deletes a player",
                 "consumes": [
                     "application/json"
                 ],
@@ -116,7 +135,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "players"
+                    "Players"
                 ],
                 "summary": "Delete a player",
                 "parameters": [
@@ -153,7 +172,12 @@
                 }
             },
             "patch": {
-                "description": "update a player",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Update a player",
                 "consumes": [
                     "application/json"
                 ],
@@ -161,7 +185,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "players"
+                    "Players"
                 ],
                 "summary": "Update a player",
                 "parameters": [
@@ -207,9 +231,9 @@
                 }
             }
         },
-        "/team": {
+        "/session": {
             "post": {
-                "description": "create a new team",
+                "description": "Creates a new session for a given set of credentials, returns a JWT token to be used as Bearer token.",
                 "consumes": [
                     "application/json"
                 ],
@@ -217,7 +241,64 @@
                     "application/json"
                 ],
                 "tags": [
-                    "teams"
+                    "Session"
+                ],
+                "summary": "Create a new session",
+                "parameters": [
+                    {
+                        "description": "Credentials",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Credentials"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Token"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/team": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Create a new team",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Teams"
                 ],
                 "summary": "Post a team",
                 "responses": {
@@ -241,7 +322,7 @@
         },
         "/team/{id}": {
             "get": {
-                "description": "get team by ID",
+                "description": "Get team by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -249,7 +330,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "teams"
+                    "Teams"
                 ],
                 "summary": "Get a team",
                 "parameters": [
@@ -289,6 +370,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a team and all of it's players",
                 "consumes": [
                     "application/json"
@@ -297,7 +383,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "teams"
+                    "Teams"
                 ],
                 "summary": "Delete a team",
                 "parameters": [
@@ -340,6 +426,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update a team",
                 "consumes": [
                     "application/json"
@@ -348,7 +439,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "teams"
+                    "Teams"
                 ],
                 "summary": "Update a team",
                 "parameters": [
@@ -393,7 +484,12 @@
         },
         "/user": {
             "post": {
-                "description": "register a new user",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Register a new user",
                 "consumes": [
                     "application/json"
                 ],
@@ -401,26 +497,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "Users"
                 ],
                 "summary": "Create a user",
                 "parameters": [
                     {
-                        "description": "Email",
-                        "name": "email",
+                        "description": "CreateUser",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Password",
-                        "name": "password",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.CreateUser"
                         }
                     }
                 ],
@@ -445,7 +532,15 @@
         },
         "/user/me": {
             "get": {
-                "description": "get user by ID",
+                "security": [
+                    {
+                        "BearerAuth": [
+                            "write",
+                            "admin"
+                        ]
+                    }
+                ],
+                "description": "Get user by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -453,9 +548,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "Users"
                 ],
-                "summary": "Get a user",
+                "summary": "Get the logged in user",
                 "parameters": [
                     {
                         "type": "integer",
@@ -501,7 +596,7 @@
         },
         "/user/{id}": {
             "get": {
-                "description": "get user by ID",
+                "description": "Get user by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -509,7 +604,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "Users"
                 ],
                 "summary": "Get a user",
                 "parameters": [
@@ -549,7 +644,15 @@
                 }
             },
             "delete": {
-                "description": "delete user by ID",
+                "security": [
+                    {
+                        "BearerAuth": [
+                            "write",
+                            "admin"
+                        ]
+                    }
+                ],
+                "description": "Delete user by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -557,7 +660,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "Users"
                 ],
                 "summary": "Delete a user",
                 "parameters": [
@@ -600,7 +703,14 @@
                 }
             },
             "patch": {
-                "description": "update user by ID",
+                "security": [
+                    {
+                        "BearerAuth": [
+                            "admin"
+                        ]
+                    }
+                ],
+                "description": "Update user by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -608,7 +718,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "Users"
                 ],
                 "summary": "Update a user",
                 "parameters": [
@@ -662,16 +772,33 @@
         }
     },
     "definitions": {
+        "Credentials": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "Token": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
         "httputil.HTTPError": {
             "type": "object",
             "properties": {
                 "code": {
-                    "type": "integer",
-                    "example": 400
+                    "type": "integer"
                 },
                 "message": {
-                    "type": "string",
-                    "example": "status bad request"
+                    "type": "string"
                 }
             }
         },
@@ -679,25 +806,42 @@
             "type": "object",
             "properties": {
                 "age": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 25
                 },
                 "country": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Germany"
                 },
-                "firstName": {
-                    "type": "string"
+                "first_name": {
+                    "type": "string",
+                    "example": "Audrey"
                 },
-                "lastName": {
-                    "type": "string"
+                "last_name": {
+                    "type": "string",
+                    "example": "Hepburn"
                 },
-                "marketValue": {
-                    "type": "integer"
+                "market_value": {
+                    "type": "integer",
+                    "example": 25000
                 },
                 "position": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
-                "teamID": {
+                "team": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.CreateUser": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
                 }
             }
         },
@@ -705,25 +849,31 @@
             "type": "object",
             "properties": {
                 "age": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 25
                 },
                 "country": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Germany"
                 },
                 "first_name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Audrey"
                 },
                 "id": {
                     "type": "integer"
                 },
                 "last_name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Hepburn"
                 },
                 "market_value": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 25000
                 },
                 "position": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 }
             }
         },
@@ -771,22 +921,28 @@
             "type": "object",
             "properties": {
                 "age": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 25
                 },
                 "country": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Germany"
                 },
                 "first_name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Audrey"
                 },
                 "last_name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Hepburn"
                 },
                 "market_value": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 25000
                 },
                 "position": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "team": {
                     "type": "integer"
@@ -803,6 +959,13 @@
                     "type": "integer"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
